--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "axios": "^0.27.2",
     "moment": "^2.29.4",
     "normalize.css": "^8.0.1",
+    "nth-check": "^2.1.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-icons": "^4.4.0",
